--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <artifactId>sfg-pet-clinic-1</artifactId>
     <groupId>guru.springframework</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <modules>
         <module>pet-clinic-data</module>
@@ -26,7 +26,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
         <jaxb.version>2.3.0</jaxb.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -97,7 +97,7 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:kmjINTL/sfg-pet-clinic-1.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>sfg-pet-clinic-1-0.0.1</tag>
     </scm>
 
 </project>
