--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <artifactId>sfg-pet-clinic-1</artifactId>
     <groupId>guru.springframework</groupId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <modules>
         <module>pet-clinic-data</module>
