--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -9,6 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-data</artifactId>
+  <version>0.0.5-SNAPSHOT</version>
 
     <properties>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
