--- a/pet-clinic-data/release.properties
+++ b/pet-clinic-data/release.properties
@@ -1,11 +1,15 @@
 #release configuration
-#Mon Dec 28 15:58:26 CAT 2020
+#Mon Dec 28 16:00:55 CAT 2020
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+completedPhase=run-preparation-goals
 scm.url=scm\:git\:git@github.com\:kmjINTL/sfg-pet-clinic-1.git/pet-clinic-data
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+scm.tag=0.0.5-SNAPSHOT
+project.rel.guru.springframework\:pet-clinic-data=0.0.5
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.dev.guru.springframework\:pet-clinic-data=0.0.5-SNAPSHOT
