--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -9,7 +9,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-web</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
 
     <properties>
         <!-- Web dependencies -->
@@ -133,4 +132,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <tag>pet-clinic-web-0.0.5</tag>
+  </scm>
 </project>
