refactoring to common crud interface, closes #11

--- a/pet-clinic-web/release.properties
+++ b/pet-clinic-web/release.properties
@@ -1,11 +1,15 @@
 #release configuration
-#Tue Dec 29 11:19:54 CAT 2020
+#Mon Jan 11 15:21:15 SAST 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+completedPhase=generate-release-poms
 scm.url=scm\:git\:git@github.com\:kmjINTL/sfg-pet-clinic-1.git/pet-clinic-web
+project.scm.guru.springframework\:pet-clinic-web.tag=sfg-pet-clinic-1-0.0.5
+project.rel.guru.springframework\:pet-clinic-web=0.0.5
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+pushChanges=true
+scm.tag=pet-clinic-web-0.0.5
+project.dev.guru.springframework\:pet-clinic-web=0.0.6-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
