upgraded to JUnit 5. Closes #4

--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <!--Added to skip test failure of surefire plugin-->
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <!--<testFailureIgnore>true</testFailureIgnore>-->
                     <argLine>
                         --illegal-access=permit
                     </argLine>
